<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00004D"
    >


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:adjustViewBounds="true"
        android:background="@drawable/register_design" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginNow"
        android:text="@string/login"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="#FFFF"
        />
    <TextView
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/loginNow"
        android:id="@+id/registerNow"
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:id="@+id/name1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFF"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email1"
        android:layout_below="@+id/name1"
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFF"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password1"
        android:layout_below="@+id/email1"
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFF"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="invisible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#676c84"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF" />
</RelativeLayout>