<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/cardio_img"
        android:layout_width="95dp"
        android:layout_height="85dp"
        android:layout_above="@+id/chest_img"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/cardio" />

    <ImageView
        android:id="@+id/chest_img"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_above="@+id/back_img"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:src="@drawable/chest" />

    <ImageView
        android:id="@+id/back_img"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_above="@+id/shoulder_img"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp"
        android:src="@drawable/back" />

    <ImageView
        android:id="@+id/shoulder_img"
        android:layout_width="80dp"
        android:layout_height="85dp"
        android:layout_above="@+id/forearms_img"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="-15dp"
        android:src="@drawable/shoulder" />

    <ImageView
        android:id="@+id/forearms_img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_above="@+id/legs_img"
        android:layout_alignParentStart="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="35dp"
        android:src="@drawable/forearm" />

    <ImageView
        android:id="@+id/legs_img"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="35dp"
        android:src="@drawable/legs" />

    <TextView
        android:id="@+id/cardio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/chest"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginBottom="30dp"
        android:layout_toEndOf="@+id/cardio_img"
        android:text="@string/cardio"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/chest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/back"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="40dp"
        android:text="@string/chest"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/shoulder"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="40dp"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/shoulder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forearms"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="55dp"
        android:text="@string/shoulder"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forearms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/legs"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="45dp"
        android:text="@string/forearms"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/legs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="40dp"
        android:text="@string/legs"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold" />


</RelativeLayout>