<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00004D"
    >
    <ImageView
        android:id="@+id/Mainimage"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@drawable/login_design"
        android:adjustViewBounds="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:text="@string/login"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="#FFFF"
        />
    <TextView
        android:textColor="#FFFF"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/login"
        android:id="@+id/registerNow"
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Mainimage"
        android:id="@+id/email"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/txtemail"
            android:textColorHint="@color/white"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerInParent="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#676c84"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="textPassword"
        />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:paddingEnd="60dp"
        android:textSize="15sp"
        android:gravity="end"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:id="@+id/forgot_password"
        android:text="@string/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#808080"
        android:paddingVertical="10dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome, Trainee"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="220sp"
        android:layout_marginLeft="70sp"/>

</RelativeLayout>