<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00004D">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:text="Back"
        android:textSize="20dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="#FFFF"
        android:backgroundTint="#676c84"
        />
    <TextView
        android:id="@+id/forgetpasstxt"
        android:text="@string/forgotPassword"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="left"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back"
        android:textColor="#FFFF"/>
    <TextView
        android:id="@+id/verificationinfo"
        android:text="Enter your informations below or login with a other account"
        android:textColor="#FFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginLeft="50dp"
        android:gravity="left"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/forgetpasstxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verificationinfo"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:hint="@string/enter_your_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/forgetPasswordProgressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonSendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/Email"
        android:layout_marginTop="80dp"
        android:text="@string/send_verification_code"
        android:layout_centerInParent="true"
        android:backgroundTint="#676c84"
        />

</RelativeLayout>